# pftp

./: .gitignore  404.html  LICENSE  README.md  business.xlsx  combined.xlsx  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
0-Notes/01_language/: index.html
0-Notes/02_reading/: index.html
0-Notes/03_writing/: index.html
0-Notes/05_resources/: index.html
04_scripts/: index.html
1-Getting-Started/01_language/: index.html
1-Getting-Started/02_development/: index.html
1-Getting-Started/02_programming/: index.html
1-Getting-Started/03_reading/: index.html
1-Getting-Started/03_resources/: index.html
1-Getting-Started/04_reuse/: index.html
2-Clippy/01_setup/: index.html
2-Clippy/02_templates/: index.html
2-Clippy/03_dates/: index.html
2-Clippy/04_clipboard/: index.html
2-Clippy/05_userfriendly/: index.html
2-Guessing-Game/: index.html
2-Guessing-Game/00_numbers/: index.html
2-Guessing-Game/01_words/: index.html
2-Guessing-Game/number/: 04_number.py
2-Guessing-Game/word/: word.py
3-Reading-and-Writing/: reading.py
5-Office-Work/: index.html
7-Production-Ready/: index.html
docs/: index.md
docs/docs/: index.md  (+3 more)
metanotes/: 2023-03-09.md  2023-04-06.md  structure.md
pftp/: combparser.py  eng.py  links.py  mkdocs.yml  pymd.py
scripts/: cleanup.py  clipfinder.py  clippy.py  emailclip.py  fractal_demo.py  notjumpscare.py  password.py  password_incomplete.py  powerball.py  powerball_incomplete.py  scratch.py  spinner_proc.py  spinner_thread.py  testing.py  uselessfact.py  uselessfact_incomplete.py  weather.py  wordle.py  xl_merge.py  xl_split.py
search/: search_index.json
test/: test_links.py  test_parser.py
(+162 files in other folders)
